tests/errors/init_state/overwrite/overwrite_non_drop_linear_errors.sim

        struct Linear: Move { r: &out i64 }
        extern fn take(l: Linear);
        fn f(x1: Linear, x2: Linear) {
          y: Linear;
          entry:
            y = move x1;
            y = move x2;
            call take(move y);
            return
        }
        